k8s/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pantheon-lab-placeholder
  labels:
    app.kubernetes.io/name: pantheon
    pantheon.io/lab: placeholder
