k8s/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pantheon-restrict-admin-and-db
  namespace: pantheon-lab-placeholder
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pantheon.io/trusted: "true"
  egress:
    - to:
        - podSelector:
            matchLabels:
              pantheon.io/allow-egress: "true"
